--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,17 @@
+module:
+  imports:
+    - path: "github.com/mfg92/hugo-shortcode-gallery"
+
 baseURL: https://skylerlemay.com
 languageCode: en-us
 title: Musings of Skyler Lemay
 copyright: "© Skyler Lemay"
-theme: [PaperMod]
+theme: ["PaperMod"]
+
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
 
 enableRobotsTXT: true
 buildDrafts: false
