add umami privacy analytics

--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -4,3 +4,7 @@ minify:
 
 params:
   env: production
+  services:
+    umami_analytics:
+      id: "98b882e2-1760-4639-bd20-eee629d534bd"
+      script_url: https://umami.culturegremlin.club/script.js
