--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,6 +2,7 @@ module:
   imports:
     - path: "github.com/mfg92/hugo-shortcode-gallery"
     - path: "github.com/adityatelange/hugo-PaperMod"
+    - path: "github.com/hugomods/umami-analytics"
 
 baseURL: https://skylerlemay.com
 languageCode: en-us
