Add Series Taxonomy (#1)
* create the series taxonomy term

* update post style for series

* add typescript utility series

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -28,6 +28,7 @@ pagination:
 
 taxonomies:
   category: categories
+  series: series
   tag: tags
 
 menu:
@@ -35,6 +36,9 @@ menu:
     - name: Archive
       url: archives
       weight: 5
+    - name: Series
+      url: series
+      weight: 7
     - name: Categories
       url: categories/
       weight: 10
