--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -11,4 +11,4 @@ params:
   services:
     umami_analytics:
       id: "98b882e2-1760-4639-bd20-eee629d534bd"
-      script_url: https://umami.culturegremlin.club/script.js
+      script_url: https://umami.skylerlemay.com/script.js
