add coffee button to homepage

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -91,6 +91,8 @@ params:
       I am also an endurance athlete, having cycled over 10,000km in 2024. As an openly trans and neurodivergent human, my writing is informed by my intersectional identity navigating the world. I passionately engage in universal design discussions across many aspects of life, including work.
 
   socialIcons:
+    - name: buymeacoffee
+      url: https://buymeacoffee.com/skylerlemay
     - name: github
       url: https://github.com/entorenee
     - name: linkedin
